add avatar and social icons on the sidebar
These features are referrenced from https://themes.gohugo.io/hyde-hyde/.

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -2,6 +2,13 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <a href="{{ .Site.BaseURL }}"><h1>{{ .Site.Title }}</h1></a>
+      {{ with .Site.Params.avatar }}
+      {{ $strippedSlash := ($.Site.Params.avatar | replaceRE "^(/)+(.*)" "$2") }}
+      {{ $avatar := (printf "%s%s" $.Site.BaseURL $strippedSlash) }}
+      <div>
+        <img src="{{$avatar}}" alt="Avatar" class="sidebar-avatar">
+      </div>
+      {{ end }}
       <p class="lead">
       {{ with .Site.Params.description }} {{.}} {{ else }}An elegant open source and mobile first theme for <a href="http://hugo.spf13.com">hugo</a> made by <a href="http://twitter.com/mdo">@mdo</a>. Originally made for Jekyll.{{end}}
       </p>
@@ -14,6 +21,9 @@
       {{- end }}
     </ul>
 
+    <p>
+      {{ partial "sidebar_social.html" . }}
+    </p>
     <p>{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{ now.Format "2006"}}. All rights reserved. {{end}}</p>
   </div>
 </div>
