--- a/static/css/hyde.css
+++ b/static/css/hyde.css
@@ -65,8 +65,8 @@ html {
     top: 0;
     left: 0;
     bottom: 0;
-    width: 18rem;
-    text-align: left;
+    width: 17rem;
+    text-align: center;
   }
 }
 
@@ -77,14 +77,16 @@ html {
 
 /* About section */
 .sidebar-about h1 {
+  text-align: center;
   color: #fff;
   margin-top: 0;
   font-family: "Abril Fatface", serif;
-  font-size: 3.25rem;
+  font-size: 2rem;
 }
 
 /* Sidebar nav */
 .sidebar-nav {
+  text-align: center;
   padding-left: 0;
   list-style: none;
 }
@@ -98,6 +100,20 @@ a.sidebar-nav-item:focus {
 .sidebar-nav-item.active {
   font-weight: bold;
 }
+
+.sidebar-social {
+  text-align: center; }
+  .social a {
+    border-style: none;
+    text-decoration: none; }
+
+.sidebar-avatar {
+  border-radius: 50%;
+  height: 115px;
+  width: 115px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
 
 /* Sticky sidebar
  *
